<resources>
   <string name="app_name">Directorio</string>
   <string name="menuitem_edit">Editar</string>
   <string name="menuitem_delete">Borrar</string>
   <string name="hint_name_required">Nombre (Requerido)</string>
   <string name="hint_email">E-Mail</string>
   <string name="hint_phone">Teléfono</string>
   <string name="hint_street">Calle</string>
   <string name="hint_city">Ciudad</string>
   <string name="hint_state">Estado</string>
   <string name="hint_zip">Zip</string>
   <string name="label_name">Nombre:</string>
   <string name="label_email">E-Mail:</string>
   <string name="label_phone">Teléfono:</string>
   <string name="label_street">Calle:</string>
   <string name="label_city">Ciudad:</string>
   <string name="label_state">Estado:</string>
   <string name="label_zip">Zip:</string>
   <string name="confirm_title">Estás Seguro?</string>
   <string name="confirm_message">Esto eliminará permanentemente el contacto.</string>
   <string name="button_cancel">Cancelar</string>
   <string name="button_delete">Borrar</string>
   <string name="contact_added">Contacto añadido con éxito</string>
   <string name="contact_not_added">No se agregó el contacto debido a un error</string>
   <string name="contact_updated">Contacto actualizado</string>
   <string name="contact_not_updated">El contacto no se actualizó debido a un error</string>
   <string name="invalid_query_uri">Uri de consulta no válido: </string>
   <string name="invalid_insert_uri">Uri de inserción no válido: </string>
   <string name="invalid_update_uri">Uri de actualización no válido: </string>
   <string name="invalid_delete_uri">Eliminar Uri no válido: </string>
   <string name="insert_failed">Error al insertar:</string>
    <string name="todo">TODO</string>
</resources>
