<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


   <android.support.design.widget.TextInputLayout
       android:id="@+id/nameTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <EditText
          android:id="@+id/editText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_name_required"
          android:imeOptions="actionNext"
          android:inputType="textCapWords|textPersonName" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/phoneTextInputLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout">

      <EditText
          android:id="@+id/editText2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_phone"
          android:imeOptions="actionNext"
          android:inputType="phone" />

   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/emailTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/phoneTextInputLayout">

      <EditText
          android:id="@+id/editText3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_email"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/streetTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

      <EditText
          android:id="@+id/editText4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_street"
          android:imeOptions="actionNext"
          android:inputType="textCapWords|textPostalAddress" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/cityTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/streetTextInputLayout">

      <EditText
          android:id="@+id/editText5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_city"
          android:imeOptions="actionNext"
          android:inputType="textCapWords|textPostalAddress" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/stateTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cityTextInputLayout">

      <EditText
          android:id="@+id/editText6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_state"
          android:imeOptions="actionNext"
          android:inputType="textPostalAddress|textCapCharacters" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.TextInputLayout
       android:id="@+id/zipTextInputLayout"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/stateTextInputLayout">

      <EditText
          android:id="@+id/editText7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_zip"
          android:imeOptions="actionDone"
          android:inputType="number" />
   </android.support.design.widget.TextInputLayout>

   <android.support.design.widget.FloatingActionButton
       android:id="@+id/saveFloatingActionButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginEnd="84dp"
       android:layout_marginBottom="236dp"
       android:src="@drawable/ic_save_24dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
