<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsScrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

   <android.support.constraint.ConstraintLayout
       android:id="@+id/gridLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:columnCount="2"
       android:useDefaultMargins="true">

      <TextView
          android:id="@+id/nameLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:text="@string/label_name"
          app:layout_constraintBottom_toTopOf="@+id/phoneLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/nameTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="spread_inside" />

      <TextView
          android:id="@+id/nameTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toTopOf="@+id/phoneTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/nameLabelTextView"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_chainStyle="spread_inside" />

      <TextView
          android:id="@+id/phoneLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:layout_marginEnd="7dp"
          android:layout_marginRight="7dp"
          android:text="@string/label_phone"
          app:layout_constraintBottom_toTopOf="@+id/emailLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/phoneTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

      <TextView
          android:id="@+id/phoneTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toTopOf="@+id/emailTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/phoneLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

      <TextView
          android:id="@+id/emailLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="21dp"
          android:layout_marginLeft="21dp"
          android:layout_marginEnd="7dp"
          android:layout_marginRight="7dp"
          android:text="@string/label_email"
          app:layout_constraintBottom_toTopOf="@+id/streetLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/emailTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/phoneLabelTextView" />

      <TextView
          android:id="@+id/emailTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toTopOf="@+id/streetTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/emailLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

      <TextView
          android:id="@+id/streetLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="28dp"
          android:layout_marginLeft="28dp"
          android:layout_marginEnd="7dp"
          android:layout_marginRight="7dp"
          android:text="@string/label_street"
          app:layout_constraintBottom_toTopOf="@+id/cityLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/streetTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/emailLabelTextView" />

      <TextView
          android:id="@+id/streetTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toTopOf="@+id/cityTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/streetLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

      <TextView
          android:id="@+id/cityLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:layout_marginLeft="15dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginBottom="1dp"
          android:text="@string/label_city"
          app:layout_constraintBottom_toTopOf="@+id/stateLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/cityTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/streetLabelTextView" />

      <TextView
          android:id="@+id/cityTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          android:layout_marginBottom="1dp"
          app:layout_constraintBottom_toTopOf="@+id/stateTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/cityLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/streetTextView" />

      <TextView
          android:id="@+id/stateLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginEnd="7dp"
          android:layout_marginRight="7dp"
          android:text="@string/label_state"
          app:layout_constraintBottom_toTopOf="@+id/zipLabelTextView"
          app:layout_constraintEnd_toStartOf="@+id/stateTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cityLabelTextView" />

      <TextView
          android:id="@+id/stateTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toTopOf="@+id/zipTextView"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/stateLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

      <TextView
          android:id="@+id/zipLabelTextView"
          style="@style/ContactLabelTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="39dp"
          android:layout_marginLeft="39dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginBottom="11dp"
          android:text="@string/label_zip"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/zipTextView"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/stateLabelTextView" />

      <TextView
          android:id="@+id/zipTextView"
          style="@style/ContactTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="3dp"
          android:layout_marginRight="3dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/zipLabelTextView"
          app:layout_constraintTop_toBottomOf="@+id/stateTextView" />
   </android.support.constraint.ConstraintLayout>
</ScrollView>